src/components/Number/number.css
.number {
  width: 100%;
  height: 100%;
  max-width: 50vw;

  display: grid;
  grid-template: 1fr / 1fr 1fr 6fr 1fr 1fr;
  place-items: stretch;

  font-family: var(--font-digits);

  background: var(--color-1);
  box-shadow: var(--shadow-1);
}

/* middle-wrapper */

.number > div {
  grid-row: 1;
  grid-column: 2 / span 3;

  background: var(--color-2);
  box-shadow: var(--shadow-2);
}

/* incrementors */

.number button {
  border: none;
  outline: none;

  width: 100%;
  height: 100%;
  background: transparent;
  cursor: pointer;
}

.number button:nth-child(1) {
  grid-row: 1;
  grid-column: 2;
}

.number button:nth-child(2) {
  grid-row: 1;
  grid-column: 4;
}

/* number input */

.number input[type=text] {
  grid-row: 1;
  grid-column: 3;

  text-align: center;

  width: 100%;
  height: 100%;
  border: none;
  outline: none;

  font-size: 2rem;
  font-family: inherit;

  background: var(--color-3);
  box-shadow: var(--shadow-3);
}

.number input[type=text]::selection {
  background: var(--color-1);
  color: var(--color-3);
}

/* border-radius */

.number,
.number > div,
.number input[type=text] {
  border-radius: 20px;
}

